--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Type parser</title>
+    <title>?</title>
 </head>
 <body>
     <div id="app"></div>
-    <script src="./bundle.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
